# FREL

./: .gitignore  ARCHITECTURE.md  CHANGES.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MAPIE_QUICKREF.md  MODEL_GUIDE.md  QUICK_REFERENCE.md  README.md  SHAPE_VERIFICATION.md  TENSORFLOW_WINDOWS_GPU_REALITY.md  debug_timing.py  pyproject.toml  quick_metric_test.py  test_car_debug.py  test_reward_speed.py  ultra_fast_reward.py
config/: default.yaml
data/: meta_scaler.json  raw_^GSPC.parquet  samples_0M.parquet
dev/: PERFORMANCE_OPTIMIZATION.md  benchmark_performance.py  check_shapes.py  debug_balance.py  example_mapie.py  main.py  main_pytorch.py  main_tensorflow_backup.py  test_full_pipeline.py  test_mapie_wrapper.py  test_model_compilation.py  test_performance.py  test_pytorch_gpu.py  test_pytorch_training.py  test_stack.py  test_synth_refactor.py  validate_mapie.py
docs/: DATASET_REFACTOR_COMPLETE.md  EARLY_STOPPING_USAGE.md  MAPIE_GUIDE.md  MAPIE_IMPLEMENTATION.md  PERFORMANCE.md  PERFORMANCE_FINAL.md  PIPELINE_SUCCESS.md  PREDICTOR_CORRECT_IMPLEMENTATION.md  PREDICTOR_PRODUCTION_READY.md  PREDICTOR_REFACTOR_COMPLETE.md  PREDICTOR_REQUIREMENTS.md  REFACTOR_PLAN.md  REWARD_REFACTOR_COMPLETE.md  SYNTH_REFACTOR_COMPLETE.md  TEST_09_FIXES.md  TRAINING_MONITORING.md
src/: __init__.py  curriculum.py  data.py  dataset.py  forward_windows.py  mapie.py  model.py  model_pytorch.py  model_tensorflow_backup.py  predictor.py  reward.py  scale.py  synth.py
tests/: __init__.py  test_all.py  test_predictor.py  test_reward.py  test_synth.py
(+31 files in other folders)
